--- a/templates/deploy-prometheus.yml
+++ b/templates/deploy-prometheus.yml
@@ -90,7 +90,7 @@ objects:
         role: endpoints
         namespaces:
           names:
-            - sandbox
+            - ${NAMESPACE}
       relabel_configs:
         - source_labels: [__meta_kubernetes_service_label_monitor]
           regex: true
